--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,24 @@
 body{
-    background-color: #2F2342;
+    background-color: #1B1A1D;
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 .box{
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    
+    
 }
 .menu{
-    width: 299px;
-    height: 1121px;
+    width:20%;
+    height: 1200px;
     background-color: #28272B;
     padding: 50px 42px;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .ava{
     display: flex;
@@ -22,9 +29,221 @@ body{
     width: 96px;
     height: 96px;
 }
-.text{
+.title-text{
     font-size: 24px;
     font-weight: 600;
     line-height: 36px;
     color: #fff;
 }
+.info-text{
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 27px;
+    color: #fff;
+}
+.choice{
+    display: flex;
+    cursor: pointer;
+}
+
+.icon{
+    width: 50px;
+    height: 50px;
+    background-color: rgba(255, 255, 255, 0.15);;
+    border-radius: 50px;
+    position: relative;
+    margin-right: 30px;
+}
+.img-icon{
+    position: absolute;
+    left: 13px;
+    top: 13px;
+    width: 24px;
+    height: 24px;
+}
+.org{
+    color: #FFA049;
+}
+
+.list-menu{
+    margin-bottom: 45px;
+}
+.choice:hover .icon{
+    background-color: #FFA049;
+    
+}
+.choice:hover .info-text{
+    color: #fff;
+    
+}
+.info-event{
+    width: 216px;
+    height: 327px;
+    border-radius: 15px;
+    background-color: #533A79;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 45px;
+}
+.small-text{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #fff;
+    text-align: center;
+    margin: 0;
+}
+.gr{
+    color: #ffffff66;
+}
+button{
+    width: 226px;
+    height: 50px;
+    background-color:#FFA049;
+    padding: 10px 18px;
+    border-radius: 25px;
+    border: 1px solid transparent;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    text-align: center;
+}
+.button{
+    width: 172px;
+    height: 47px;
+    margin-top: 40px;
+}
+.card{
+    width: 55%;
+    height: 1500px;
+    padding: 5px;
+}
+.input{
+    width: 370px;
+    height: 60px;
+    border: 2px solid #323036;
+    border-radius: 50px;
+    padding: 10px 10px 10px 20px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: flex-start;
+    margin-right: 45px;
+    
+}
+input{
+    background-color: #1B1A1D;
+    border: none;
+    outline: none;  
+    
+    
+}
+.img-icon2{
+    margin: 8px 10px;  
+    
+}
+.header{
+    display: flex;
+    justify-content: flex-start;
+    width: 21px;
+    height: 24px;
+    margin: 30px 21px;
+    align-items: center;
+}
+.nav{
+    display: flex;
+    flex-direction: column;
+}
+.nav-list{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 40px;
+}
+.nav-left{
+    display: flex;
+    justify-content: flex-start;
+}
+.border-text{
+    width: 200px;
+    height: 40px;
+    border: 1px solid #46444B;
+    border-radius: 50px;
+    padding: 7px;
+    box-sizing: border-box;
+    margin-right: 10px;
+}
+.icon-mini{
+    margin-right: 40px;
+}
+.icon-mini::after{
+    content: url(../img/st.png);
+    position: relative;
+    left: 10px;
+}
+.border-text:hover{
+    border: 1px solid #fff;
+    color: #fff;
+}
+.cards-line{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+.card-info{
+    width: 392px;
+    height: 430px;
+    border-radius: 15px;
+    padding: 0 0 30px 0;
+    background-color: #28272B;
+    
+}
+.star{
+    position: relative;
+    margin-left: 102px;
+}
+.star::before{
+    content: url(../img/Stars.png);
+    position: absolute;
+    left: -106px;
+    top: 1px;
+}
+.price-button{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.price{
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 45px;
+    color: #fff;
+    
+}
+.icon-plus{
+    position: relative;
+}
+.icon-plus::before{
+    content: url(../img/plus.png);
+    position: absolute;
+    left: 15px;
+    top: 11px;
+    
+}
+.pad-5{
+    padding: 0 25px 25px 25px;
+}
+
+.mr-26{
+    margin-right: 26px;
+}
+.info{
+    width: 25%;
+}
+
+
+
