--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,18 @@ body{
     background-color: #1B1A1D;
     font-family: 'Poppins', sans-serif;
     margin: 0;
+    padding-right: 1%;
 }
 .box{
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    
     
     
 }
 .menu{
-    width:20%;
-    height: 1200px;
+    max-width: 15%;
+    height: 1100px;
     background-color: #28272B;
     padding: 50px 42px;
     box-sizing: border-box;
@@ -28,18 +29,21 @@ body{
 #ava{
     width: 96px;
     height: 96px;
+    border-radius: 50px;
 }
 .title-text{
     font-size: 24px;
     font-weight: 600;
     line-height: 36px;
     color: #fff;
+    
 }
 .info-text{
     font-size: 18px;
     font-weight: 500;
     line-height: 27px;
     color: #fff;
+    text-align: start;
 }
 .choice{
     display: flex;
@@ -49,7 +53,7 @@ body{
 .icon{
     width: 50px;
     height: 50px;
-    background-color: rgba(255, 255, 255, 0.15);;
+    background-color: rgba(255, 255, 255, 0.15);
     border-radius: 50px;
     position: relative;
     margin-right: 30px;
@@ -62,14 +66,19 @@ body{
     height: 24px;
 }
 .org{
-    color: #FFA049;
+    color: rgb(255, 157, 255);
+}
+.list-menu{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
-.list-menu{
-    margin-bottom: 45px;
+.list-menu-side{
+    margin-bottom: 10px;
 }
 .choice:hover .icon{
-    background-color: #FFA049;
+    background-color: rgb(255, 157, 255);
     
 }
 .choice:hover .info-text{
@@ -77,10 +86,10 @@ body{
     
 }
 .info-event{
-    width: 216px;
+    width: 210px;
     height: 327px;
     border-radius: 15px;
-    background-color: #533A79;
+    background-color: rgba(255, 255, 255, 0.15);
     padding: 30px 20px;
     box-sizing: border-box;
     display: flex;
@@ -103,7 +112,7 @@ body{
 button{
     width: 226px;
     height: 50px;
-    background-color:#FFA049;
+    background-color:rgb(232, 157, 255);
     padding: 10px 18px;
     border-radius: 25px;
     border: 1px solid transparent;
@@ -119,9 +128,10 @@ button{
     margin-top: 40px;
 }
 .card{
-    width: 55%;
+    max-width: 55%;
     height: 1500px;
-    padding: 5px;
+    padding: 25px 0;
+    
 }
 .input{
     width: 370px;
@@ -151,12 +161,15 @@ input{
     justify-content: flex-start;
     width: 21px;
     height: 24px;
-    margin: 30px 21px;
+    margin: 30px 0;
     align-items: center;
 }
 .nav{
     display: flex;
     flex-direction: column;
+    margin-top: 68px;
+    
+    width: 100%;
 }
 .nav-list{
     display: flex;
@@ -189,18 +202,33 @@ input{
     border: 1px solid #fff;
     color: #fff;
 }
+.cards{
+    display: flex;
+    flex-direction: column;
+    
+}
 .cards-line{
     display: flex;
     justify-content: space-between;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 }
 .card-info{
     width: 392px;
-    height: 430px;
+    height: 450px;
     border-radius: 15px;
     padding: 0 0 30px 0;
     background-color: #28272B;
     
+    
+}
+.card-info:hover{
+    border: 1px solid white;
+}
+.pic{
+    width: 392px;
+    height: 230px;
+    border-radius: 15px 15px 0 0;
+
 }
 .star{
     position: relative;
@@ -226,11 +254,15 @@ input{
 }
 .icon-plus{
     position: relative;
+    text-align: end;
+    padding: 0 20px;
+    
+    
 }
 .icon-plus::before{
     content: url(../img/plus.png);
     position: absolute;
-    left: 15px;
+    left: 25px;
     top: 11px;
     
 }
@@ -238,12 +270,51 @@ input{
     padding: 0 25px 25px 25px;
 }
 
-.mr-26{
-    margin-right: 26px;
-}
+
 .info{
-    width: 25%;
+    max-width: 30%;
+    
 }
 
+.card-info-big{
+    max-width: 548px;
+    height: 1050px;
+    border-radius: 15px;
+    background-color: #28272B;
+    
 
+}
+.not-text-align{
+    text-align: left;
+    margin-bottom: 44px;
+}
+.account{
+    display: flex;
+    
+}
 
+.mr-0{
+    margin: 0;
+}
+.mrt-5{
+    margin-top: 5px;
+}
+.mr-15{
+    margin-right: 15px;
+}
+.info-tx{
+    display: flex;
+    flex-direction: column;
+}
+
+.pic-big{
+    max-width: 100%;
+    height: 370px;
+    border-radius: 15px 15px 0 0;
+}
+.account-icon{
+    width: 60px;
+    height: 60px;
+    border-radius: 60px;
+    margin-right: 30px;
+}
