--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,18 @@ body{
     background-color: #1B1A1D;
     font-family: 'Poppins', sans-serif;
     margin: 0;
-    padding-right: 1%;
+   
 }
 .box{
     display: flex;
     justify-content: space-between;
+    margin: 0 5px;
     
     
     
 }
 .menu{
-<<<<<<< HEAD
     max-width: 15%;
-=======
-    width:15%;
->>>>>>> 79861ebee13d981e7222acd6b2517106b249be43
     height: 1100px;
     background-color: #28272B;
     padding: 50px 42px;
@@ -60,7 +57,7 @@ body{
     background-color: rgba(255, 255, 255, 0.15);
     border-radius: 50px;
     position: relative;
-    margin-right: 30px;
+    margin-right: 10px;
 }
 .img-icon{
     position: absolute;
@@ -71,20 +68,18 @@ body{
 }
 .org{
     color: rgb(255, 157, 255);
-<<<<<<< HEAD
+
 }
 .list-menu{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+
 }
 
 .list-menu-side{
-=======
-}
 
-.list-menu{
->>>>>>> 79861ebee13d981e7222acd6b2517106b249be43
+
     margin-bottom: 10px;
 }
 .choice:hover .icon{
@@ -96,21 +91,17 @@ body{
     
 }
 .info-event{
-    width: 210px;
+    width: 190px;
     height: 327px;
     border-radius: 15px;
-<<<<<<< HEAD
     background-color: rgba(255, 255, 255, 0.15);
-=======
-    background-color: rgb(50, 23, 90);
->>>>>>> 79861ebee13d981e7222acd6b2517106b249be43
     padding: 30px 20px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    margin-top: 45px;
+    margin-top: 30px;
 }
 .small-text{
     font-size: 16px;
@@ -126,11 +117,7 @@ body{
 button{
     width: 226px;
     height: 50px;
-<<<<<<< HEAD
     background-color:rgb(232, 157, 255);
-=======
-    background-color:rgb(255, 157, 255);
->>>>>>> 79861ebee13d981e7222acd6b2517106b249be43
     padding: 10px 18px;
     border-radius: 25px;
     border: 1px solid transparent;
@@ -146,16 +133,10 @@ button{
     margin-top: 40px;
 }
 .card{
-<<<<<<< HEAD
-    max-width: 55%;
+    max-width: 83%;
     height: 1500px;
     padding: 25px 0;
     
-=======
-    width: 45%;
-    height: 1500px;
-    padding: 25px 30px;
->>>>>>> 79861ebee13d981e7222acd6b2517106b249be43
 }
 .input{
     width: 370px;
@@ -192,11 +173,8 @@ input{
     display: flex;
     flex-direction: column;
     margin-top: 68px;
-<<<<<<< HEAD
-    
     width: 100%;
-=======
->>>>>>> 79861ebee13d981e7222acd6b2517106b249be43
+
 }
 .nav-list{
     display: flex;
@@ -216,6 +194,7 @@ input{
     padding: 7px;
     box-sizing: border-box;
     margin-right: 10px;
+    cursor: pointer;
 }
 .icon-mini{
     margin-right: 40px;
@@ -233,6 +212,7 @@ input{
     display: flex;
     flex-direction: column;
     
+    
 }
 .cards-line{
     display: flex;
@@ -240,7 +220,7 @@ input{
     margin-bottom: 15px;
 }
 .card-info{
-    width: 392px;
+    width: 370px;
     height: 450px;
     border-radius: 15px;
     padding: 0 0 30px 0;
@@ -252,17 +232,12 @@ input{
     border: 1px solid white;
 }
 .pic{
-    width: 392px;
+    width: 370px;
     height: 230px;
     border-radius: 15px 15px 0 0;
 
 }
-.pic{
-    width: 392px;
-    height: 200px;
-    border-radius: 15px 15px 0 0;
 
-}
 .star{
     position: relative;
     margin-left: 102px;
@@ -300,13 +275,13 @@ input{
     
 }
 .pad-5{
-    padding: 0 25px 25px 25px;
+    padding: 0 15px 15px 15px;
 }
 
 
 .info{
-<<<<<<< HEAD
-    max-width: 30%;
+
+    max-width: 27%;
     
 }
 
@@ -316,16 +291,6 @@ input{
     border-radius: 15px;
     background-color: #28272B;
     
-=======
-    width: 30%;
-}
-
-.card-info-big{
-    width: 548px;
-    height: 1050px;
-    border-radius: 15px;
-    background-color: #28272B;
->>>>>>> 79861ebee13d981e7222acd6b2517106b249be43
 
 }
 .not-text-align{
@@ -333,31 +298,19 @@ input{
     margin-bottom: 44px;
 }
 .account{
-<<<<<<< HEAD
+
     display: flex;
     
 }
 
-=======
-    margin-left: 90px;
-}
-.icon-ava{
-    position: relative;
-}
-.icon-ava::before{
-    content: url(../img/Avatar.png);
-    position: absolute;
-    left: -90px;
-    top: -2px;
-}
->>>>>>> 79861ebee13d981e7222acd6b2517106b249be43
+
 .mr-0{
     margin: 0;
 }
 .mrt-5{
     margin-top: 5px;
 }
-<<<<<<< HEAD
+
 .mr-15{
     margin-right: 15px;
 }
@@ -376,19 +329,5 @@ input{
     height: 60px;
     border-radius: 60px;
     margin-right: 30px;
-=======
-.icon-ava1{
-    position: relative;
-}
-.icon-ava1::before{
-    content: url(../img/Avatar-1.png);
-    position: absolute;
-    left: -90px;
-    top: -2px;
-}
-.pic-big{
-    width: 548px;
-    height: 386px;
-    border-radius: 15px 15px 0 0;
->>>>>>> 79861ebee13d981e7222acd6b2517106b249be43
+
 }
